infra-kubernetes/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-food-app
  labels:
    app: fast-food-app
spec:
  replicas: 2  # Número inicial de réplicas
  selector:
    matchLabels:
      app: fast-food-app
  template:
    metadata:
      labels:
        app: fast-food-app
    spec:
      containers:
        - name: fast-food-app
          image: 881490125586.dkr.ecr.us-east-1.amazonaws.com/fast-food-system:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
