infra-kubernetes/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-food-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fast-food.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-food-app-service
                port:
                  number: 80
